@@ -423,6 +423,12 @@ public interface ERDesignerBundle {
   String DEFAULTFORONUPDATE = "DEFAULTFORONUPDATE";
   /** \u0050\u006c\u0065\u0061\u0073\u0065\u0020\u0073\u0061\u0076\u0065\u0020\u0079\u006f\u0075\u0072\u0020\u0041\u0074\u0074\u0072\u0069\u0062\u0075\u0074\u0065\u0020\u0063\u0068\u0061\u006e\u0067\u0065\u0073\u0020\u0066\u0069\u0072\u0073\u0074\u0021. */
   String SAVEATTRIBUTECHANGESFIRST = "SAVEATTRIBUTECHANGESFIRST";
+  /** \u0054\u0068\u0065\u0020\u0065\u006e\u0074\u0065\u0072\u0065\u0064\u0020\u0065\u006c\u0065\u006d\u0065\u006e\u0074\u0020\u006e\u0061\u006d\u0065\u0020\u0069\u0073\u0020\u0069\u006e\u0076\u0061\u006c\u0069\u0064. */
+  String NAMEINVALID = "NAMEINVALID";
+  /** \u0054\u0068\u0065\u0072\u0065\u0020\u0069\u0073\u0020\u0061\u006c\u0072\u0065\u0061\u0064\u0079\u0020\u0061\u006e\u0020\u0049\u006e\u0064\u0065\u0078\u0020\u0077\u0069\u0074\u0068\u0020\u0074\u0068\u0065\u0020\u0073\u0061\u006d\u0065\u0020\u006e\u0061\u006d\u0065\u0021. */
+  String INDEXALREADYEXISTS = "INDEXALREADYEXISTS";
   /** \u0050\u006c\u0065\u0061\u0073\u0065\u0020\u0073\u0061\u0076\u0065\u0020\u0079\u006f\u0075\u0072\u0020\u0049\u006e\u0064\u0065\u0078\u0020\u0063\u0068\u0061\u006e\u0067\u0065\u0073\u0020\u0066\u0069\u0072\u0073\u0074\u0021. */
   String SAVEINDEXCHANGESFIRST = "SAVEINDEXCHANGESFIRST";
+  /** \u0054\u0068\u0065\u0072\u0065\u0020\u0069\u0073\u0020\u0061\u006c\u0072\u0065\u0061\u0064\u0079\u0020\u0061\u006e\u0020\u0041\u0074\u0074\u0072\u0069\u0062\u0075\u0074\u0065\u0020\u0077\u0069\u0074\u0068\u0020\u0074\u0068\u0065\u0020\u0073\u0061\u006d\u0065\u0020\u006e\u0061\u006d\u0065\u0021. */
+  String ATTRIBUTEALREADYEXISTS = "ATTRIBUTEALREADYEXISTS";
 }
