@@ -17,7 +17,6 @@
  */
 package de.erdesignerng.visual.editor.openxavaexport;
 
-import javax.swing.JFrame;
 import javax.swing.JPanel;
 import javax.swing.JScrollPane;
 
