@@ -228,4 +228,7 @@ AUTOMATICRELATIONATTRIBUTEPATTERN.text=\u004e\u0061\u006d\u0065\u0020\u006f\u006
 DEFAULTFORONDELETE.text=\u0044\u0065\u0066\u0061\u0075\u006c\u0074\u0020\u0066\u006f\u0072\u0020\u004f\u004e\u0044\u0045\u004c\u0045\u0054\u0045
 DEFAULTFORONUPDATE.text=\u0044\u0065\u0066\u0061\u0075\u006c\u0074\u0020\u0066\u006f\u0072\u0020\u004f\u004e\u0055\u0050\u0044\u0041\u0054\u0045
 SAVEATTRIBUTECHANGESFIRST.text=\u0050\u006c\u0065\u0061\u0073\u0065\u0020\u0073\u0061\u0076\u0065\u0020\u0079\u006f\u0075\u0072\u0020\u0041\u0074\u0074\u0072\u0069\u0062\u0075\u0074\u0065\u0020\u0063\u0068\u0061\u006e\u0067\u0065\u0073\u0020\u0066\u0069\u0072\u0073\u0074\u0021
+NAMEINVALID.text=\u0054\u0068\u0065\u0020\u0065\u006e\u0074\u0065\u0072\u0065\u0064\u0020\u0065\u006c\u0065\u006d\u0065\u006e\u0074\u0020\u006e\u0061\u006d\u0065\u0020\u0069\u0073\u0020\u0069\u006e\u0076\u0061\u006c\u0069\u0064
+INDEXALREADYEXISTS.text=\u0054\u0068\u0065\u0072\u0065\u0020\u0069\u0073\u0020\u0061\u006c\u0072\u0065\u0061\u0064\u0079\u0020\u0061\u006e\u0020\u0049\u006e\u0064\u0065\u0078\u0020\u0077\u0069\u0074\u0068\u0020\u0074\u0068\u0065\u0020\u0073\u0061\u006d\u0065\u0020\u006e\u0061\u006d\u0065\u0021
 SAVEINDEXCHANGESFIRST.text=\u0050\u006c\u0065\u0061\u0073\u0065\u0020\u0073\u0061\u0076\u0065\u0020\u0079\u006f\u0075\u0072\u0020\u0049\u006e\u0064\u0065\u0078\u0020\u0063\u0068\u0061\u006e\u0067\u0065\u0073\u0020\u0066\u0069\u0072\u0073\u0074\u0021
+ATTRIBUTEALREADYEXISTS.text=\u0054\u0068\u0065\u0072\u0065\u0020\u0069\u0073\u0020\u0061\u006c\u0072\u0065\u0061\u0064\u0079\u0020\u0061\u006e\u0020\u0041\u0074\u0074\u0072\u0069\u0062\u0075\u0074\u0065\u0020\u0077\u0069\u0074\u0068\u0020\u0074\u0068\u0065\u0020\u0073\u0061\u006d\u0065\u0020\u006e\u0061\u006d\u0065\u0021
