@@ -195,4 +195,7 @@ AUTOMATICRELATIONATTRIBUTEPATTERN.text=\u004e\u0061\u006d\u0065\u006e\u0073\u006
 DEFAULTFORONDELETE.text=\u0056\u006f\u0072\u0065\u0069\u006e\u0073\u0074\u0065\u006c\u006c\u0069\u006e\u0067\u0020\u0066\u00fc\u0072\u0020\u004f\u004e\u0044\u0045\u004c\u0045\u0054\u0045
 DEFAULTFORONUPDATE.text=\u0056\u006f\u0072\u0065\u0069\u006e\u0073\u0074\u0065\u006c\u006c\u0069\u006e\u0067\u0020\u0066\u00fc\u0072\u0020\u004f\u004e\u0055\u0050\u0044\u0041\u0054\u0045
 SAVEATTRIBUTECHANGESFIRST.text=\u0042\u0069\u0074\u0074\u0065\u0020\u0073\u0070\u0065\u0069\u0063\u0068\u0065\u0072\u006e\u0020\u0053\u0069\u0065\u0020\u007a\u0075\u0065\u0072\u0073\u0074\u0020\u0049\u0068\u0072\u0065\u0020\u00c4\u006e\u0064\u0065\u0072\u0075\u006e\u0067\u0065\u006e\u0020\u0061\u006e\u0020\u0064\u0065\u006d\u0020\u0041\u0074\u0074\u0072\u0069\u0062\u0075\u0074\u0021
+NAMEINVALID.text=\u0044\u0065\u0072\u0020\u0065\u0069\u006e\u0067\u0065\u0062\u0065\u006e\u0065\u006e\u0065\u0020\u0045\u006c\u0065\u006d\u0065\u006e\u0074\u006e\u0061\u006d\u0065\u0020\u0069\u0073\u0074\u0020\u0075\u006e\u0067\u00fc\u006c\u0074\u0069\u0067\u0021
+INDEXALREADYEXISTS.text=\u0045\u0073\u0020\u0065\u0078\u0069\u0073\u0074\u0069\u0065\u0072\u0074\u0020\u0073\u0063\u0068\u006f\u006e\u0020\u0065\u0069\u006e\u0020\u0049\u006e\u0064\u0065\u0078\u0020\u006d\u0069\u0074\u0020\u0067\u006c\u0065\u0069\u0063\u0068\u0065\u006d\u0020\u004e\u0061\u006d\u0065\u006e\u0021
 SAVEINDEXCHANGESFIRST.text=\u0042\u0069\u0074\u0074\u0065\u0020\u0073\u0070\u0065\u0069\u0063\u0068\u0065\u0072\u006e\u0020\u0053\u0069\u0065\u0020\u007a\u0075\u0065\u0072\u0073\u0074\u0020\u0049\u0068\u0072\u0065\u0020\u00c4\u006e\u0064\u0065\u0072\u0075\u006e\u0067\u0065\u006e\u0020\u0061\u006e\u0020\u0064\u0065\u006d\u0020\u0049\u006e\u0064\u0065\u0078\u0021
+ATTRIBUTEALREADYEXISTS.text=\u0045\u0073\u0020\u0065\u0078\u0069\u0073\u0074\u0069\u0065\u0072\u0074\u0020\u0073\u0063\u0068\u006f\u006e\u0020\u0065\u0069\u006e\u0020\u0041\u0074\u0074\u0072\u0069\u0062\u0075\u0074\u0020\u006d\u0069\u0074\u0020\u0067\u006c\u0065\u0069\u0063\u0068\u0065\u006d\u0020\u004e\u0061\u006d\u0065\u006e\u0021
